testsuite/tests/generic-optional-arguments/non_existent_type.compilers.reference
File "non_existent_type.ml", line 12, characters 29-41:
12 |   val concat : (?sep):string non_existent -> string list -> string
                                  ^^^^^^^^^^^^
Error: Unbound type constructor "non_existent"
